# hello-napi-go

./: .gitmodules  Makefile  README.md  go.mod
.github/workflows/: test.yaml
cmd/hello/: lib.go  main.go
hello-napi/: CMakeLists.txt  index.js  package-lock.json  package.json  test.js
hello-napi/src/: bridge.cc
src/: hello.cc
